# commandgraph

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PLAN.md  README.md  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml
commandgraph/: __init__.py  cli.py  data.py  indexer.py  review.py  risk.py  search.py  slots.py  templates.py
commandgraph/resources/: risk_rules.json
commandgraph/resources/commands/: chown.json  curl.json  du.json  find.json  grep.json  head.json  kill.json  npm.json  pip.json  touch.json  unzip.json
data/: synonyms.json
data/commands/: cat.json  chmod.json  cp.json  df.json  dig.json  docker.json  fuser.json  git.json  ls.json  lsof.json  mkdir.json  mv.json  ping.json  ps.json  rm.json  ss.json  tail.json  tar.json  zip.json
docs/: architecture.md
examples/: review.json
tests/: test_cli.py  test_indexer.py  test_package_entrypoints.py  test_review.py  test_risk.py  test_search.py  test_templates.py
